[package]
name = "aoc2021"
version = "0.1.0"
authors = ["Ritoban Roy-Chowdhury <ritobanrc@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
debug = true

[dependencies]
itertools = "0.9.0"
nalgebra = "0.29.0"
paste = "1.0.0"
regex = "1.4.0"
parse-display = "0.5.3"
rustc-hash = "1.1.0"
